[gd_scene load_steps=8 format=2]

[ext_resource path="res://ArmyScene/Army/ArmySprite.png" type="Texture" id=1]
[ext_resource path="res://ArmyScene/Range/RangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArmyScene/Army/TargetSprite.png" type="Texture" id=3]
[ext_resource path="res://ArmyScene/Army/ArmyScene.gd" type="Script" id=4]
[ext_resource path="res://ArmyScene/Army/explotion.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "Explotion"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7, 8, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[node name="Army" type="Area2D"]
script = ExtResource( 4 )

[node name="RangeScene" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ArmySprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ExplotionSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 3
vframes = 3
frame = 4

[node name="TargetSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 17.0
margin_top = -26.0
margin_right = 57.0
margin_bottom = -12.0
text = "army"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExplotionSprite")
anims/Explotion = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Army_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Army_area_exited"]
